# tt-check

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/tt_check/: __init__.py  cli.py
tests/: test_cli.py
